# match_sync_lite

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  MatchSync_Lite.md  README.md  README.rst  main.py  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
data/raw/: estructura.xlsx  tabla1.xlsx  tabla2.xlsx
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: 00_MatchSync_Lite.ipynb
reports/: Resumen.xlsx  muestra_validacion_manual.xlsx  tabla1_iteracion_1.csv  tabla2_iteracion_0.csv
scripts/: genera_estructura.py  generate_data.py
src/: __init__.py
src/data/: process_data.py
src/match_sync_lite/scripts/: generate_data.py
src/match_sync_lite/src/data/: __init__.py  process_data.py
src/match_sync_lite/src/visualization/: plot_results.py
src/visualization/: plot_results.py
tests/: __init__.py  conftest.py  test_generate_data.py  test_process_data.py  test_visualization.py
